Start work of some of the UI. Lazy hacks in FindXray but it works so if it isn't broke, don't fix it. :)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,6 @@ commands:
   dbg:
     description: Used to debug data
     usage: /dbg
+  ban:
+    description: Used to issue ban and tempbans to players
+    usage: /ban <player name>
