--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -27,3 +27,58 @@ commands:
     usage: /kick
     usage: /kick <player name>
 depend: [ProtocolLib]
+permissions:
+    bb.ban:
+        description: Allows a player to ban others.
+        default: op
+    bb.unban:
+        description: Allows a player to unban others.
+        default: op
+    bb.tempban:
+        description: Allows a player to tempban others.
+        default: op
+    bb.tempipban:
+        description: Allows a player to temp IP ban others.
+        default: op
+    bb.ipban:
+        description: Allows a player to IP ban others
+        default: op
+    bb.immune:
+        description: Makes a player unpunishable
+        default: op
+    bb.mute:
+        description: Allows a player to mute/unmute others.
+        default: op
+    bb.checkban:
+        description: Allows a player to check others ban info
+        default: op
+    bb.checkban.self:
+        description: Allows a player to check their own ban info (and warnings)
+        default: true
+    bb.checkip:
+        descriptions: Allows a player to lookup another players IP address
+        default: op
+    bb.dupeip:
+        description: Allows a player to check other accounts that use the same IP address as the given one
+        default: op
+    bb.warn:
+        description: Allows a player to give out warnings to others.
+        default: op
+    bb.unwarn:
+        description: Removes the most recent warning from a player
+        default: op
+    bb.clearwarnings:
+        description: Allows a player to delete all warnings for a given player.
+        default: op
+    bb.kick:
+        description: Allows a player to kick others with a reason
+        default: op
+    bb.lockdown.use:
+        description: Allows a player to use /lockdown on|off.
+        default: op
+    bb.lockdown.bypass:
+        description: Allows a player to enter the server if lockdown is enabled
+        default: op
+    bb.seesilent:
+        description: Allows a player to see other players using silent ban commands
+        default: op
